--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jasmine Dong - Pre-Business Major</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jasmine Dong</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jasminedong.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jasmine Dong
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Pre-Business📚</div>
+        <p class="lead mb-4">I am a freshman student at UCR majoring in Pre-Business. My goal is to major in marketing and become a commercial designer in the future. In order to reach my goal, I have been taking multiple classes to improve my skills and knowledge of economics and computer science. Classes such as Business 10 and Economics have been improving my ability to understand the economy and its pattern. Classes such as Computer Science have helped improve my ability to use important software such as Excel, Word, and Powerpoint. In the future I would like to take some classes to improve my digital art skills; therefore, bettering my ability to create and establish better artworks.<br><br>
 
-        Enter bio here<br><br>
+        I am currently working as a cashier in a merchandise store called Daiso Japan for about two years. This particular job experience helped me understand how to understand a company's sales report and taught me how to use money wisely. I started this job during my junior year of high school. After acquiring the job, I was able to pay for my daily expenses and car payment. Furthermore, my first job helped me improve my customer service skills. Every day, there would be some customers that would have problems and issues of our product, as a cashier, my job was to help them and solve their issues professionally. After two years of working, I was able to establish a very professional customer service skill for my customers. As a cashier, my job also included completing and preparing the end of the day sales report for my managers and owners; therefore, I was able to establish the ability to understand and prepare a sales report. This job experience really helped me acquire much knowledge about customers and companies.<br><br>
 
-        Enter bio here
+        Some of my hobbies are video editing and digital art designing; therefore, I am very interested in market designing. During my spare time, I would often edit videos for special occasions, such as for performances, birthday parties, and Youtube videos. For example, I helped a Chinese Lunar Year Performance crew to prepare their background and music for their performance. This particular experience allowed me to know many people that are part of the Chinese Media. With the help of everyone in the crew, we were able to have a successful performance and live show. In addition, I would also post and some of my digital artworks and paintings on social media such as Instagram. All the support from friends and social media inspired me to become a commercial designer. Although I am not a professional artist, I am willing to take classes and improve my skills on digital art software and drawing skills. Personally, I am very interested in marketing and introducing new products. In addition, my passion for art further-on led me on the pathway of becoming a commercial designer. In addition, I am very interested in working in a technology company and help them market their newly developed technologies. In the future, my goal is to help the audience to have a better image of the products that I am marketing.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/jdong037">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/jasmine_sup">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:jasmined114@hotmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +90,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Club Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="http://www.aacf.org/">Asian American Fellowship Club</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Help spread Christianity<br> 
+              • Worship God<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">July 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.daisojapan.com/">Daiso Japan</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              •Help prepare sales repot and order merchandises<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">April 2017 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Dance competitor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.youtube.com/watch?v=i007S95IqGI">Elements Dance Space - Junior Hit List</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Joined multiple dance competitions<br>
+            • Won many dance competitions such as Max Out, World of Dance, etc<br>
+            • Helped organize dance classes and sessions for dancers<br>
+            • Help prepare multiple collaborations and fundraisers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2014 - March 2019</span>
           </div>
         </div>
 
@@ -152,30 +149,30 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Pre-Business Major</div>
+            <div>BA in Business Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2019 - June 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">CHINO HILLS HIGH SCHOOL</h3>
+            <div class="subheading mb-3">High School Graduate</div>
+            <div>High School Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2015 - June 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">MUSCATEL MIDDLE SCHOOL</h3>
+            <div class="subheading mb-3">Middle School Graduate</div>
+            <div>Middle School Dilpoma</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2012 - May 2016</span>
@@ -191,7 +188,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/1.jpg" width="500px">
+            <img src="img/2.jpg" width="500px"> <br>
+            <img src="img/3.jpg" width="500px">
+            <img src="img/4.jpg" width="500px"> <br>
+            <img src="img/5.jpg" width="500px">
+            <img src="img/6.jpg" width="500px"> <br>
         </center>
       </div>
     </section>
@@ -199,7 +201,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jasmine Dong</center><br>
 
 
   </div>
